Re: dim plaza spam

--- a/tfrc/index.html
+++ b/tfrc/index.html
@@ -22,7 +22,7 @@ title: ".tfrc"
 <script src="https://gist.github.com/makyo/e436c94c6e569e9d7e50be52eb0027d5.js?file=log_mentions.tf"></script>
 
 <h2>Hilites</h2>
-<p>My hilites are pretty standard. All I've done that's special in <code>hilites.tf</code> is add a <code>/wfhilite</code> macro to quickly add a hilite partial for other folks I want to see easily. Hilites of me, along with pages and whispers, are green, while hilites of others are cyan.</p>
+<p>My hilites are pretty standard. All I've done that's special in <code>hilites.tf</code> is add a <code>/wfhilite</code> macro to quickly add a hilite partial for other folks I want to see easily. Hilites of me, along with pages and whispers, are green, while hilites of others are cyan. Additionally, some lines that are obvious enter/leave spam from the Plaza on Tapestries are dimmed.</p>
 <script src="https://gist.github.com/makyo/e436c94c6e569e9d7e50be52eb0027d5.js?file=hilites.tf"></script>
 
 <h2>Pulling it together</h2>
