--- a/3rings/index.html
+++ b/3rings/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>The Rings - A 78-Card Tarot Spread</title>
@@ -12,48 +13,33 @@
 
             .nucleus {
                 background-color: #9E9;
-                color: #000;
-            }
-            td.nucleus {
-                border: 1px solid #000;
             }
 
             .order {
                 background-color: #BBF;
-                color: #000;
-            }
-            td.order{
-                border: 1px solid #000;
             }
 
             .chaos {
                 background-color: #FBB;
-                color: #000;
-            }
-            td.chaos {
-                border: 1px solid #000;
             }
 
             .transition {
                 background-color: #FF9;
-                color #000;
-            }
-            td.transition {
-                border: 1px solid #000;
             }
 
             .final {
                 background-color: #D9D;
-                color #000;
-            }
-            td.final {
-                border: 1px solid #000;
             }
 
             .pov {
                 background-color: #DDD;
-                color: #000;
             }
+
+            td.nucleus,
+            td.order,
+            td.chaos,
+            td.transition,
+            td.final,
             td.pov {
                 border: 1px solid #000;
             }
@@ -90,7 +76,7 @@
         <h1>The Rings - A 78-Card Tarot Spread</h1>
         <h2>The Layout</h2>
         <p>Below is a chart of the layout of The Rings.  Along the top and left side are numbered axes to assist in the placement of the cards.  Each of the rest of the colored boxes represents a card, with the numbers in the boxes representing the order in which the cards are placed.  Each of those numbers links to a latter part of this document in order to describe the meaning of that position.  This layout takes about three feet by five feet of space and takes a good deal of time, about two to five hours.</p>
-        <table align="center" cellspacing="3px"><a name="spread" />
+        <table align="center" cellspacing="3px" id="spread">
             <tr>
                 <td>&times;</td>
                 <td class="axes">1</td>
@@ -277,11 +263,11 @@
             <li><h3 class="pov">Self or Point-of-View Cards</h3>
                 <p>The Self cards are used to refer to, in this case, both the bottom three cards of the spread as well as the two transitory cards above.</p>
                 <ul>
-                    <li><a name="self" /><h4>Self Cards</h4>
+                    <li id="self"><h4>Self Cards</h4>
                         <p>The self cards are, as stated before, taken as a single entity and read as one grouping of cards.  They are placed as they are, three beneath each ring, because the meaning they hold is in line with the tense of the ring they're below.  in other words, working from past to future from left to right.  The meaning of the three cards in each group is condensed into an idea and taken in that condext.<br />
                         <a href="#spread">H3, H4, H5, H9, H10, H11, H15, H16, H17</a></p>
                     </li>
-                    <li><a name="self-trans" /><h4>Self-Transition Cards</h4>
+                    <li id="self-trans"><h4>Self-Transition Cards</h4>
                         <p>The transitory cards between the self cards provide not only some connection in the time scale, but also help with the dignifying of the self cards.  In addition, they may be used to connect each of the self cards to the rings above it and next to it.  They aren't well or ill dignified, but take on a generic meaning, as opposed to those transitory cards between the rings, which are affected by the cards around them.<br />
                         <a href="#spread">G7, G13</a></p>
                     </li>
@@ -290,11 +276,11 @@
             <li><h3 class="nucleus">Nucleus Cards</h3>
                 <p>Nucleus cards are meant to be read Center - Left - Right and taken as a whole.  There is no difference amonst the ring tenses when it comes to reading the nucleus, other than it should be taken into account when interpreting the heart of the issue.</p>
                 <ul>
-                    <li><a name="nucleus-center"><h4>Center Nucleic Card</h4>
+                    <li id="nucleus-center"><h4>Center Nucleic Card</h4>
                         <p>The central nucleic card is the center of all - the nucleus of the nucleus.  Here is the heart of the heart of the issue, which, when represented by a face card or a trump could represent a primary player in the matter.  A minor <em>arcana</em> card might represent a prevalent force or influence involved.<br />
                         <a href="#spread">D4, D10, D16</a></p>
                     </li>
-                    <li><a name="nucleus-outer"><h4>Outside Nucleic Cards</h4>
+                    <li id="nucleus-outer"><h4>Outside Nucleic Cards</h4>
                         <p>The two cards surrounding the central card of each ring are also foci of the issue itself, though they may be weaker than that represented by the central card.  Court cards or trumps may be other characters involved, close to the central character, but acting to a lesser extent, not quite in the realm of order.<br />
                         <a href="#spread">D3, D5, D9, D11, D15, D17</a></p>
                     </li>
@@ -303,11 +289,11 @@
             <li><h3 class="order">Order Cards</h3>
                 <p>The order cards lie close to the nucleic cards due to thei influence they exert over them being particularly strong.  However, their number is limited, being less than the chaotic influences of the next ring out.  The order cards are divided into two groups, strong (those directly adjacent to a nucleic card) and weak (the top and bottom cards which are not adjacent to a nucleic card).</p>
                 <ul>
-                    <li><a name="order-strong" /><h4>Strong Order Cards</h4>
+                    <li id="order-strong"><h4>Strong Order Cards</h4>
                         <p>Strong order cards are distinguished by their proximity to the heart of the issue, providing more influence than the North and South cardinal cards, also known as the weak cards.  As a result, whether they make the nucleic cards well or ill dignified does not depend on their own dignification from chaotic and transitional cards around them, though that will affect their own disposition.<br />
                         <a href="#spread">C3, C5, C9, C11, C15, C17, D2, D6, D8, D12, D14, D18, E3, E5, E9, E11, E15, E17</a></p>
                     </li>
-                    <li><a name="order-weak" /><h4>Weak Order Cards</h4>
+                    <li id="order-weak" /><h4>Weak Order Cards</h4>
                         <p>The remaining four order cards are considered weak because of their distance from the nucleic cards.  This is shown by the fact that whether they are well or ill dignified towards the nucleic cards is not dependent upon suit, but rather on whether they are well or ill dignified by the chaotic cards that surround them (as in a sort of "fair-weather friend" way).  As a result, these cards signify characters or forces that are only loosely under sway of the Issue, being more in the realm of chaos.<br />
                         <a href="#spread">B4, B10, B16, F4, F10, F16</a></p>
                     </li>
@@ -316,21 +302,21 @@
             <li><h3 class="chaos">Chaos Cards</h3>
                 <p>Just as the number of uncontrollable things in our lives outnumbers the things we have influence over, there are more chaotic cards than any others in the spread.  This region of cards is divided into two different sets: the overt chaotic cards provide a more visible influence on the Issue, while the subtle chaotic cards may change things in ways that might not seem obvious at first.  The overt chaotic cards are those to the North of the nucleus while the subtle cards are to the South.</p>
                 <ul>
-                    <li><a name="chaos-overt" /><h4>Overt Chaotic Cards</h4>
+                    <li id="chaos-overt"><h4>Overt Chaotic Cards</h4>
                         <p>Overt chaotic cards make their presence known in the reading by their visibility in the Issue, showing themselves readily and influencing both the heart of the issue, as well as the ordered part.  They are read in a standard way, influenced as they are by other chaotic cards as well as the order cards, both strong and weak.<br />
-                        <a href=#spread">A4, A10, A16, B3, B5, B9, B11, B15, B17, C2 C6, C8, C12, C14, C18</a></p>
+                        <a href="#spread">A4, A10, A16, B3, B5, B9, B11, B15, B17, C2 C6, C8, C12, C14, C18</a></p>
                     </li>
-                    <li><a name="chaos-subtle" /><h4>Subtle Chaotic Cards</h4>
+                    <li id="chaos-subtle"><h4>Subtle Chaotic Cards</h4>
                         <p>The second half of the chaotic cards represents the unseen forces at work with the Issue.  Though they may be harder to see, there's no reason that they should be any weaker than the overt cards.  This subtlety is shown by the fact that they do not dignify the stronger ordered cards in any way, only the weaker card that they surround on three sides.<br />
                         <a href="#spread">E2, E6, E8, E12, E14, E18, F3, F5, F9, F11, F15, F17, G4, G10, G16</a></p>
                     </li>
                 </ul>
             </li>
-            <li><a name="transition" /><h3 class="transition">Transition Cards</h3>
+            <li><h3 class="transition" id="transition">Transition Cards</h3>
                 <p>The transition cards provide a sense of time in the reading, particularly poignant when the cards are read for cartomancy.  They still fit in the idea-framework model, though more as an indication as to how time affects issues when they change.  The left-most transition card is read in a general sort of way without any disposition, whereas all of the rest of the cards work only from left to right.  That is, their disposition is affected by cards only to the left of the, and they only dignify cards to the right of the, just as time passes from past to future.  The cards may provide an overall mood for the cards that follow in the next ring.<br />
                 <a href="#spread">D1, D7, D13</a></p>
             </li>
-            <li><a name="final" /><h3 class="final">The Final Card</h3>
+            <li id="final"><h3 class="final">The Final Card</h3>
                 <p>The final card provides a succinct glimpse into the future for those using cartomantic methods, whereas with the idea-framework model, it provides a look at how the impending weight of time-to-come can change the feeling of the Resolution.  This card does not dignify the cards near it at all, simply providing an impression of the future.<br />
                 <a href="#spread">D19</a></p>
             </li>
